Alignment issue in nav bar has been fixed

--- a/admin-ui/src/app/features/masterdata/list-view/list-view.component.scss
+++ b/admin-ui/src/app/features/masterdata/list-view/list-view.component.scss
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .header {
@@ -19,7 +19,7 @@
 .breadcrumb {
   font-size: 9.5px;
   position: absolute;
-  margin-top: 13px;
+  margin-top: 25px;
   font-family: "Roboto", sans-serif;
 }
 
